# BaltosPuzzle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StartingConfigurations.txt
scripts/: rsync_to.sh
solutions/10/: 158  1622  1672  1736  1794  1828  1836  1838  1862  1896  1910  1920  1924  1938  1942  1982  1994  2052  2074  2110  2178  26
solutions/11/: 2130  2182  2196  2244  2346  2359  2490  2578  2672
solutions/12/: 2520  2754  2756  2860  2868  2900  2934  2946  3008  3150  3196  3254  3312  3374  3414  3417
solutions/13/: 3574  3586  3632  3686  3736  3852  4218  4324  4326  4370
solutions/14/: 4434  4472  4480  4510  4516  4546  4552  4570  4584  4590  4652  4654  4672  4732  4758  4786  4802  5113  5189  5368  5416  5475
solutions/15/: 5292  5458  5522  5548  5596  5752  5800  5848  6551  6674  6768  6910
solutions/16/: 6578  6720  6738  6760  6830  6892  6958  6980  7060  7582  7876  8015  8022  8218  8262
solutions/17/: 7894  8064  8284  8458  9496  9554
solutions/18/: 10182  10704  11252  11328  11576  9462  9604  9694  9704  9778  9882  9896  9926
solutions/19/: 11200  11378  11590  11714  13248  13872
solutions/20/: 12403  12476  12825  12840  12904  13048  13060  13106  13250  13450  13980  13984  14088  14241  15194  15216  15902  16108
solutions/21/: 15078  15490  15838  15964  18008  19198
solutions/22/: 17204  17640  17766  17990  21732
solutions/23/: 19618  19968  20200  20442  25474
solutions/24/: 22786  22924  23158  23230  23548  28443  28503  28517  28542  28549  28631  28813  28853  28867  28877  28899  28923  29085
solutions/25/: 25426  25872  25978  26038  26178  26408  33017  34098
solutions/26/: 28756  29102  29368  29660  36070
solutions/27/: 31684  32582  32718  32914  36900  37018  40016  41404
solutions/3/: 27  28  29  30  35
solutions/4/: 103  126  140  196  25  53  55  59  76  77  78  79  80  81  82  83  84  86  87  90  94  96  97
solutions/5/: 112  138  162  166  169  170  172  173  174  175  176  177  181  207  209  220  221  222  247  269  273  287  82
solutions/6/: 304  305  307  308  309  313  315  320  324  328  329  333  334  337  339  341  345  347  348  349  353  354  358  361  368  377  381  388  389  391  405  407  423  465  57
solutions/7/: 331  335  451  490  504  512  527  539  542  544  548  549  552  566  606  612
solutions/8/: 0  1013  1031  1035  1039  1089  1129  1179  1263  752  765  770  785  789  800  801  820  838  842  845  847  848  849  852  853  854  856  857  860  864  867  874  882  883  884  886  888  889  890  896  (+22 more)
solutions/9/: 1132  1168  1224  1244  1252  1255  1263  1270  1282  1296  1297  1300  1302  1304  1310  1316  1318  1326  1328  1334  1340  1346  1348  1350  1352  1354  1356  1362  1384  1386  1388  1392  1394  1402  1404  1408  1410  1450
src/: base.cpp  base.hpp  beam_search.cpp  beam_search.hpp  beam_search_cpu.cpp  beam_search_cpu.hpp  beam_search_gpu.cu  beam_search_gpu.hpp  beam_state.cpp  beam_state.hpp  eval.cpp  eval.hpp  evaluation.hpp  find_perms.cpp  find_perms.hpp  gpu_save.cu  greedy.cpp  header.hpp  main.cpp  puzzle.cpp  puzzle.hpp  save.cu  solver.cpp  solver.hpp  solver_old.cpp  train.cpp  training.cpp  training.hpp  visu.cpp
weights/: w10  w11  w12  w13  w14  w15  w16  w17  w18  w19  w20  w21  w22  w23  w24  w25  w26  w27  w5  w6  w7  w8
